[ay] add first implementation